Fixed end game screen on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -93,8 +93,8 @@ p {
   justify-content: center;
   align-items: center;
   position: fixed;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   top: 0;
 }
 
